tests/ui/unsafe/unsafe-assign.thirunsafeck.stderr
error[E0282]: type annotations needed
  --> $DIR/unsafe-assign.rs:12:5
   |
LL |     foo.0.0 = 0_i32;
   |     ^^^^^^^ cannot infer type

error[E0609]: no field `0` on type `_ is 1..`
  --> $DIR/unsafe-assign.rs:12:11
   |
LL |     foo.0.0 = 0_i32;
   |           ^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0282, E0609.
For more information about an error, try `rustc --explain E0282`.
